style: jumbotron, landing-three

--- a/index.html
+++ b/index.html
@@ -9,10 +9,45 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
-    <!-- Navigation -->
-    <div class="navigation">
-      
+    <!-- jumbotron -->
+    <div class="jumbotron">
+      <div class="container">
+        <img src="https://via.placeholder.com/70" alt="logotype" class="jumbotron-logo">
+        <h1 class="jumbotron-title">La Nouvelle Forge</h1>
+        <p class="jumbotron-text">Notre histoire est de vous offrir des services et de l’accompagnement tout en générant du flux vers notre site virtuel et physique. </p>
+        <a href="#" class="btn btn-white">Nos services</a>
+      </div>
     </div>
-    <!-- Navigation -->
+    <!-- jumbotron -->
+
+    <!-- landing-three -->
+    <div class="container">
+      <div class="three-contain">
+        <div class="three">
+          <img src="https://via.placeholder.com/110" alt="computer">
+          <p class="title">Se former</p>
+          <p class="text">La Nouvelle Forge propose des formations à travers leurs résidents.</p>
+        </div>
+        <div class="three">
+          <img src="https://via.placeholder.com/110" alt="diagramme">
+          <p class="title">Se developper</p>
+          <p class="text">La Nouvelle Forge aide au developpement des jeunes entreprises.</p>
+        </div>
+        <div class="three">
+          <img src="https://via.placeholder.com/110" alt="ecrou">
+          <p class="title">Produire</p>
+          <p class="text">La Nouvelle Forge permet la réalisation et la production de vos projets.</p>
+        </div>
+      </div>
+    </div>
+    <!-- landing-three -->
+
+    <!-- landing-composantes -->
+    <div class="container">
+      <div class="composants-contain">
+        <h2 class="title title-design">Nos composantes</h2>
+      </div>
+    </div>
+    <!-- landing-composantes -->
   </body>
-</html>
+</html> 
