--- a/index.html
+++ b/index.html
@@ -44,8 +44,20 @@
 
     <!-- landing-composantes -->
     <div class="container">
+      <h2 class="title title-design">Nos composantes</h2>
       <div class="composants-contain">
-        <h2 class="title title-design">Nos composantes</h2>
+        <div class="composants title">Pépinière d’Entreprises</div>
+        <!-- <div class="composants">Fablab</div>
+        <div class="composants">Nos résidents</div>
+        <div class="composants">
+          Nos services
+          <div class="composants-secondary">
+            Coworking
+            Codesign
+            Formations
+            Acompagnements
+          </div> 
+        </div> -->
       </div>
     </div>
     <!-- landing-composantes -->
