style: composants finish

--- a/index.html
+++ b/index.html
@@ -46,7 +46,39 @@
     <div class="container">
       <h2 class="title title-design">Nos composantes</h2>
       <div class="composants-contain">
-        <div class="composants title">Pépinière d’Entreprises</div>
+        <a href="#">
+          <div class="composants">
+            <div class="composants-contain-title">
+              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="composants-img"></div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="composants">
+            <div class="composants-contain-title">
+              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="composants-img"></div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="composants">
+            <div class="composants-contain-title">
+              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="composants-img"></div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="composants">
+            <div class="composants-contain-title">
+              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="composants-img"></div>
+            </div>
+          </div>
+        </a>
+
         <!-- <div class="composants">Fablab</div>
         <div class="composants">Nos résidents</div>
         <div class="composants">
