--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Nouvelle Forge</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEdivSl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
     <!-- jumbotron -->
@@ -24,7 +26,7 @@
     <div class="container">
       <div class="three-contain">
         <div class="three">
-          <img src="https://via.placeholder.com/110" alt="computer">
+          <i class="fa fa-laptop fa-4x text-primary"></i>
           <p class="title">Se former</p>
           <p class="text">La Nouvelle Forge propose des formations à travers leurs résidents.</p>
         </div>
@@ -49,7 +51,7 @@
         <a href="#">
           <div class="composants">
             <div class="composants-contain-title">
-              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="title composants-title">Pépinière d’Entreprises</div>
               <div class="composants-img"></div>
             </div>
           </div>
@@ -57,7 +59,7 @@
         <a href="#">
           <div class="composants">
             <div class="composants-contain-title">
-              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="title composants-title">Fablab</div>
               <div class="composants-img"></div>
             </div>
           </div>
@@ -65,7 +67,7 @@
         <a href="#">
           <div class="composants">
             <div class="composants-contain-title">
-              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="title composants-title">Nos résidents</div>
               <div class="composants-img"></div>
             </div>
           </div>
@@ -73,25 +75,45 @@
         <a href="#">
           <div class="composants">
             <div class="composants-contain-title">
-              <h3 class="title composants-title">Pépinière d’Entreprises</h3>
+              <div class="composants-title"><h3 class="title">Nos services</h3> 
+                Coworking <br>
+                Codesign <br>
+                Formations <br>
+                Acompagnements</div>
               <div class="composants-img"></div>
             </div>
           </div>
         </a>
-
-        <!-- <div class="composants">Fablab</div>
-        <div class="composants">Nos résidents</div>
-        <div class="composants">
-          Nos services
-          <div class="composants-secondary">
-            Coworking
-            Codesign
-            Formations
-            Acompagnements
-          </div> 
-        </div> -->
       </div>
     </div>
     <!-- landing-composantes -->
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container container-footer">
+        <div class="footer-about">
+          <h3 class="footer_title">À propos</h3>
+          <a href="#">Notre équipe</a><br>
+          <a href="#">Nous contacter</a>
+        </div>
+        <div class="footer-social">
+          <h3 class="footer_title">Nous suivre</h3>
+          <div class="footer-social_icon">
+            <a href="#"><i class="fa fa-facebook fa-2x"></i></a> 
+            <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+          </div>
+        </div>
+        <div class="footer-address">
+          <h3 class="footer_title">Adresse</h3>
+          <p>80 avenue Roland Moreno</p>
+          <p>Anzin 59410</p>
+        </div>
+        <div class="footer-more">
+          <a href="#">Politique de confidentialités</a><br>
+          <a href="#">Conditions générales</a>
+        </div>
+      </div>
+    </footer>
+    <!-- footer -->
   </body>
 </html> 
