--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Nouvelle Forge</title>
 
+    <link rel="icon" type="image/png" href="images/logos_nf_ original_sansfond.png" />
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    
     <link rel="stylesheet" href="style.css">
@@ -14,7 +16,7 @@
     <!-- jumbotron -->
     <div class="jumbotron">
       <div class="container">
-        <img src="https://via.placeholder.com/70" alt="logotype" class="jumbotron-logo">
+        <img src="images/logos_nf_ Blanc_sansfond.png" alt="logotype" class="jumbotron-logo">
         <h1 class="jumbotron-title">La Nouvelle Forge</h1>
         <p class="jumbotron-text">Notre histoire est de vous offrir des services et de l’accompagnement tout en générant du flux vers notre site virtuel et physique. </p>
         <a href="#" class="btn btn-white">Nos services</a>
