style: desc-big, desc-medium, team

--- a/description.html
+++ b/description.html
@@ -21,5 +21,80 @@
       </div>
     </div>
     <!-- description -->
+    <!-- description-img-title -->
+    <div class="container-small">
+      <div class="description-img-title">
+        <h3 class="title text-primary">Imprimante 3D</h3>
+        <div class="description-img">
+          <img src="/images/print-3d.JPG" alt="Imprimante" class="img-style">
+        </div>
+      </div>
+      <div class="description-img-title">
+        <h3 class="title text-primary">Imprimante 3D</h3>
+        <div class="description-img">
+          <img src="/images/print-3d.JPG" alt="Imprimante" class="img-style">
+        </div>
+      </div>
+    </div>
+    <!-- description-img-title -->
+    <!-- pricings -->
+    <div class="container">
+      <div class="description">
+        <h3 class="title text-primary">Tarifs des adhésions</h3>
+        <strong>Adhésion annuelle  :</strong> <br><br>
+        Étudiant 	50 €	<br><br>
+        Particulier	80 €	<br><br>
+        Famille	120 € (2 pers.) 140 € (3 pers.) 150 € (4 pers.)<br><br>
+        Association	130 €	
+      </div>
+    </div>
+    <!-- pricings -->
+    <!-- planning -->
+    <div class="container">
+      <div class="description">
+        <h3 class="title text-primary">Horaires</h3>
+        Du Lundi au Vendredi de 9h30-17h.
+      </div>
+    </div>
+    <!-- planning -->
+    <!-- desc-big -->
+   <div class="container container-desc-big">
+    <div class="desc-big">
+      <h3 class="title text-primary">PopSchool</h3>
+      <img src="/images/popschool.jpg" alt="Popschool" class="desc-big-img">
+      <p class="desc-big-text">
+        Organisme de formation aux métiers du numérique, 
+        POPSchool propose des formations innovantes à destination des jeunes, des demandeurs d’emploi et des personnes en reconversion professionnelle. Situées en Hauts-de-France et en Ile-de-France, les formations de POP School sont ouvertes à toutes et à tous.
+      </p>
+      <a href="#" class="btn btn-primary">Le site internet</a>
+    </div>
+    <div class="desc-big">
+      <h3 class="title text-primary">PopSchool</h3>
+      <img src="/images/popschool.jpg" alt="Popschool" class="desc-big-img">
+      <p class="desc-big-text">
+        Organisme de formation aux métiers du numérique, 
+        POPSchool propose des formations innovantes à destination des jeunes, des demandeurs d’emploi et des personnes en reconversion professionnelle. Situées en Hauts-de-France et en Ile-de-France, les formations de POP School sont ouvertes à toutes et à tous.
+      </p>
+      <a href="#" class="btn btn-primary">Le site internet</a>
+    </div>
+   </div>
+    <!-- desc-big -->
+    <!-- desc-medium -->
+    <div class="container">
+      <div class="desc-medium">
+        <h3 class="title title-design">Co-Design</h3>
+        <div class="container-desc-medium">
+          <img src="/images/co-design.jpg" alt="co-design" class="desc-medium-img">
+          <div>
+            <h3 class="title text-primary">Co-Designons</h3>
+            <p class="desc-medium-text">
+              Le Co-design encourage  la co-conception d’un produit ou service.
+              Il fait appel à différentes compétences, en interne et/ou en externe.  Cette démarche débouche aussi sur une compréhension partagée de l’expérience utilisateur.
+            </p>
+          </div>
+        </div>
+      </div>
+     </div>
+    <!-- desc-medium -->
   </body>
 </html> 
