--- a/description.html
+++ b/description.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Nouvelle Forge - Pépinière</title>
+    <title>La Nouvelle Forge</title>
 
     <link rel="icon" type="image/png" href="images/logos_nf_ original_sansfond.png" />
 
@@ -91,6 +91,20 @@
               Le Co-design encourage  la co-conception d’un produit ou service.
               Il fait appel à différentes compétences, en interne et/ou en externe.  Cette démarche débouche aussi sur une compréhension partagée de l’expérience utilisateur.
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="desc-medium">
+        <h3 class="title title-design">Co-Design</h3>
+        <div class="container-desc-medium">
+          <img src="/images/co-design.jpg" alt="co-design" class="desc-medium-img">
+          <div>
+            <h3 class="title text-primary">Co-Designons</h3>
+            <p class="desc-medium-text">
+              Le Co-design encourage  la co-conception d’un produit ou service.
+              Il fait appel à différentes compétences, en interne et/ou en externe.  Cette démarche débouche aussi sur une compréhension partagée de l’expérience utilisateur.
+            </p>
+            <a href="#" class="btn btn-primary">Le site internet</a>
           </div>
         </div>
       </div>
