--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Nouvelle Forge - Pépinière</title>
+    <title>La Nouvelle Forge</title>
 
     <link rel="icon" type="image/png" href="images/logos_nf_ original_sansfond.png" />
 
