--- a/header.html
+++ b/header.html
@@ -19,6 +19,9 @@
         <a href="#">
           <img src="images/logos_nf_ Blanc_sansfond.png" alt="logotype" class="navbar-logo">
         </a>
+        <div class="burger">
+          <span class="middle-bar"></span>
+        </div>
         <nav class="nav">
           <a href="#" class="nav-item">Nos services</a>
           <a href="#" class="nav-item">La pépinière</a>
